--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 <body>
   <div class="container">
     <h1>Gabung Grup WhatsApp!</h1>
-    <p>Masuk brohh! Grup udah rame, OTW 200 member! Siap-siap dapet <strong>tutor ngatasin nope lengket</strong> langsung dari suhu-suhu skena!</p>
+    <p>Masuk brohh! Grup udah rame, OTW 200 member! Siap-siap dapet <strong>tutor ngatasin nope lengket</strong> langsung dari suhu-suhu nyaa!</p>
     <a class="join-btn" href="https://chat.whatsapp.com/LdCbqEv8w7V0t2wCPrzkcq" target="_blank">Gabung Sekarang</a>
-    <div class="admin-contact">inii nomor admin real: +6285267215344</div>
+    <div class="admin-contact">inii nomor admin real: +6285167215344</div>
     <div class="warning">GAPAKE MC JANGAN KOAR KOAR DI RIPP</div>
   </div>
 </body>
